# hpctoolkit

./: .autotools  .clang-format  .clang-format-ignore  .clang-format-include  .clang-tidy  .codespellrc  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.yml  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .vermin  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  LICENSE.md  Make.tarfiles  Makefile.am  Makefile.in  Makefile.quick  README  README.Acknowledgments  README.Acknowledgments.license  README.Contact  README.Externals  README.Index  README.Install  README.Install.license  README.License  README.ReleaseNotes  README.ReleaseNotes.license  README.banal  README.config  (+16 more)
branches/4.2.1-optimized-code-redesign/: Makefile.am  Makefile.in  Makefile.quick  README  README.ReleaseNotes  autogen  configure  configure.ac
branches/csprof-bgp32/: Makefile.am  Makefile.in  configure  configure.ac  mwf-bgp-compute-node.sh  mwf-bgp-specific.sh  run.sh
doc/: .gitattributes  FORMATS.md  HPCToolkit-users-manual.pdf.license  METRICS.yaml  Makefile.am  Makefile.in  OLD-hpc_bloop.html  README  building-old.html  building.html  dtd_hpcview.html  dtd_pgm.html  dtd_profile.html  header_hpctoolkit.js  header_hpctools.js  hpc_bloop.html  hpc_ptran.html  hpc_xprof.html  hpcprof.html  hpcquick.html  hpcrun.html  hpcview.html  hpcviewer.html  hvprof.html  hwctools.html  index.html  meson.build  testing.html
doc/developers/: example-deps.yaml  meson.ini
doc/dtd/: hpc-experiment-proposal.dtd  hpc-experiment.dtd  hpc-structure.dtd  hpcprof-config.dtd
doc/guides/: HPCToolkit-quickstart-guide.tex  HPCToolkit-static.tex  HPCToolkit-troubleshooting.tex  Makefile.am  Makefile.in  pubs.bib
doc/man/: .editorconfig  Makefile.am  Makefile.in  bloop.tex  hpclink.tex  hpcprof-flat.tex  hpcprof-mpi.tex  hpcprof.rst  hpcprof.tex  hpcproftt.rst  hpcproftt.tex  hpcquick.tex  hpcrun-flat.tex  hpcrun.rst  hpcrun.tex  hpcstruct.rst  hpcstruct.tex  hpcsummary.tex  hpctoolkit.rst  hpctoolkit.tex  hpctraceviewer.tex  hpcview.tex  hpcviewer.rst  hpcviewer.tex  meson.build
doc/manual/: HPCToolkit-users-manual.tex  Makefile.am  Makefile.in  Makefile.latex  environ.tex  gpu.tex  hpcrun.tex  hpctraceviewer.tex  hpcviewer-users-manual.tex  hpcviewer.tex  meson.build  myconfig.tex
doc/spack/: packages.yaml  spack-issues.txt
doc/src/: conf.py  index.md  meson.build  sphinx-pdf.py  sphinx-singlefile.py
doc/texinfo/: Makefile  README  filter-html.pl  part1  software-instructions.texi  spack-issues.texi
doc/www/: Makefile.am  Makefile.in  documentation.html  documentation.html.in  download.html  download.html.in  examples.html  examples.html.in  hpctoolkit.org.sitemap.txt  index.html  index.html.in  info-acks.html  info-acks.html.in  info-contact.html  info-people.html  info-people.html.in  meson.build  overview.html  overview.html.in  papers.html  people.html  pub2gen.sh  pubgen.sh  publications.html  publications.html.in  software-build.html  software-instructions.html  software-instructions.html.in  software.html  software.html.in  spack-issues.html  training.html  training.html.in
lib/: Makefile.am  Makefile.in  README  meson.build
lib/dev/: pyproject.toml
lib/dtd/: HPCView.dtd  PGM.dtd  hpc-experiment-proposal.dtd  hpc-experiment.dtd  hpc-structure.dtd  hpcprof-config.dtd
lib/html/: global.js  manTitle.html  scopes.self.hdr.html  styleForAll.css  utilsForHere.js
lib/python/: install  meson.build  pyproject.toml  pytest-as-gtest.py  vendor
meson/: .editorconfig  autogen  configure  decode-mpi  hash-file.in  in-tmpdir.py  lint-depends  make  meson.build  sanity.sycl.cpp  spack-paths.py  spack-query.py  vcs-query.sh  vcs.sed.in
meson/modules/: FindBFD.cmake  FindDyninst.cmake  FindGotcha.cmake  FindIberty.cmake  FindLibDw.cmake  FindLibDwarf.cmake  FindLibElf.cmake  FindMbedTLS.cmake  FindMonitor.cmake  FindPAPI.cmake  FindPFM.cmake  FindROCm.cmake  FindValgrind.cmake  FindXed.cmake  FindXerces.cmake
src/: .editorconfig  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makeinclude.config  Makeinclude.config.alpha-OSF1  Makeinclude.config.i686-Linux  Makeinclude.config.ia64-Linux  Makeinclude.config.mips-IRIX64  Makeinclude.config.powerpc-Darwin  Makeinclude.config.sparc-SunOS  Makeinclude.rules  README  meson.build
src/common/: Args.cpp  Args.hpp  CStrUtil.cpp  CStrUtil.h  CallPath-Profile.cpp  CallPath-Profile.hpp  CmdLineParser.cpp  CmdLineParser.hpp  Exception.cpp  Exception.hpp  FileNameMap.cpp  FileNameMap.hpp  FileUtil.cpp  FileUtil.hpp  HashTable.cpp  HashTable.hpp  HashTableSortedIterator.cpp  HashTableSortedIterator.hpp  IOUtil.cpp  IOUtil.hpp  IteratorStack.cpp  IteratorStack.hpp  Logic.cpp  Logic.hpp  NaN.c  NaN.h  NonUniformDegreeTree.cpp  NonUniformDegreeTree.hpp  PathFindMgr.cpp  PathFindMgr.hpp  PathReplacementMgr.cpp  PathReplacementMgr.hpp  PointerStack.cpp  PointerStack.hpp  ProcNameMgr.cpp  ProcNameMgr.hpp  QuickSort.cpp  QuickSort.hpp  Raw.cpp  Raw.hpp  (+29 more)
src/hpcfnbounds/: fnbounds.c  fnbounds.h  meson.build  process-ranges.h  server.c  server.h
src/hpcprof/: accumulators.cpp  accumulators.hpp  args.cpp  args.hpp  attributes.cpp  attributes.hpp  context.cpp  context.hpp  dataclass.cpp  dataclass.hpp  expression.cpp  expression.hpp  finalizer.cpp  finalizer.hpp  lexical.cpp  lexical.hpp  main-mpi.cpp  main.cpp  meson.build  metric.cpp  metric.hpp  module.cpp  module.hpp  mpi.cpp  packedids.cpp  packedids.hpp  pipeline.cpp  pipeline.hpp  scope.cpp  scope.hpp  sink.cpp  sink.hpp  source.cpp  source.hpp  static.data.cpp.in  tree.cpp  tree.hpp
tests/: .clang-format  Makefile.am  Makefile.in  Makefile.spack.in  meson.build  run-sort.in  run-sort.sh  sort.cpp  unit.py
tests2/: .editorconfig  Makefile.am  Makefile.in  meson.build  meson_options.txt
trunk/: KNOWN_ISSUES  Make.tarfiles  Makefile.am  Makefile.in  Makefile.quick  README  README.Contact  README.Index  README.Install  README.License  README.ReleaseNotes  Sourceme-csh  Sourceme-sh  aclocal.m4  autogen  configure  configure.ac
(+13722 files in other folders)
